gradle-docker-plugin has problems with java 11 https://bmuschko.github.io/gradle-docker-plugin/ - states that it doesn't work at all, but in practice the only problem seems to be excessively long error stacktrace during dockerBuildImage. Going back to java 8 fixes this problem.